fixed dupliucate id in salutation

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -22,15 +22,15 @@
     Vue.component("date-picker", {
         template: "#vue-date-picker",
         delimiters: ["${", "}"],
-        props: [
-            'value',
-        ],
         computed: {
             isEdgeDesktop() {
                 var isEdge = window.navigator.userAgent.indexOf("Edge/") > -1;
                 var isTouch = window.ontouchstart !== undefined;
                 return isEdge && !isTouch;
             }
+        },
+        computed: {
+
         },
         methods: {
             emitInputEvent() {
