--- a/resources/views/content/SalutationSelect.twig
+++ b/resources/views/content/SalutationSelect.twig
@@ -1,8 +1,8 @@
 <script type="x/template" id="vue-salutation-select">
     <div>
         <div v-for="(salutation, index) in currentSalutation">
-            <input :id="'salutation' + index" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="salutation.key" type="radio" @change="emitInputEvent($event.target.value)" name="salutation" :checked="addressData.gender === salutation.key">
-            <label :for="'salutation' + index">
+            <input :id="'salutation' + _uid + index" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="salutation.key" type="radio" @change="emitInputEvent($event.target.value)" name="salutation" :checked="addressData.gender === salutation.key">
+            <label :for="'salutation' + _uid + index">
                 ${ salutation.name }
             </label>
         </div>
