fixed error in isValid

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -34,7 +34,7 @@
                 return ""
             },
             isValid() {
-                return this.streetNumber !== "" && this.streetName === ""
+                return this.streetNumber !== "" && this.streetName !== ""
             }
         },
         methods: {
