--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -7,6 +7,12 @@
             :id="'txtBirthdate' + _uid"
             @change="emitInputEvent($event.target.value)"
         >
+        <div v-if="isEdgeDesktop">
+              <input v-if="isEdgeDesktop" type="text" name="birthday2" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" 
+            :id="'txtBirthdate' + _uid"
+            @change="emitInputEvent($event.target.value)"
+        >
+        </div>
         <input v-else type="date" name="birthday2" min="1901-12-14" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}"
             :max="new Date().toISOString().split('T')[0]"  
             :id="'txtBirthdate' + _uid"
