fixed isValid in addressfield

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -34,7 +34,7 @@
                 return ""
             },
             isValid() {
-                return this.fullAddress !== 
+                return this.splittedAddress.length !== 0 && this.streetName !== "" && this.streetNumber !== ""
             }
         },
         methods: {
