--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -7,7 +7,7 @@
         <div v-if="isEdgeDesktop">
             <input type="text" id="datepicker">
         </div>
-        <input v-else type="date" name="birthday2" min="1901-12-14" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}"
+        <input v-else type="date" name="birthday" min="1901-12-14" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}"
             :max="new Date().toISOString().split('T')[0]"  
             :id="'txtBirthdate' + _uid"
             @change="emitInputEvent($event.target.value)"
