--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -45,6 +45,7 @@
                     if (day && month && year) {
                         var birthday = year + "-" + month + "-" + day 
                         this.$emit("input", { field: "birthday", value: birthday });
+                        console.log("edge debug", birthday)
                     }
                 } else {
                     this.$emit("input", { field: "birthday", value: value });
