changed the modal title in add-item-to-basket-overlay

--- a/resources/views/content/AddToBasketOverlay.twig
+++ b/resources/views/content/AddToBasketOverlay.twig
@@ -6,7 +6,8 @@
 
                     <!-- MODAL HEADER -->
                     <div class="modal-header">
-                        <div class="modal-title h5">${ $translate("Ceres::Template.singleItemAdded") }</div>
+                        <div class="modal-title h2">Vielen Dank!</div>
+                        <span class="h5">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</span>
                         <span class="text-muted ml-auto"><span class="timer"></span>s</span>
                         <button type="button" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
