--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -1,5 +1,5 @@
-<script type="x/template" data-component="add-item-to-basket-overlay">
-     <div id="add-item-to-basket-overlay">
+<script type="x/template" id="add-item-to-basket-overlay">
+     <div>
         <div class="modal fade">
             <div class="modal-dialog" role="document">
                 <div class="modal-content" v-if="basketItem">
