switched position of modal-header text in addItemToBasketOverlay.twig

--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -12,11 +12,11 @@
                     <!-- MODAL HEADER -->
                     <div class="modal-header">
                         <div class="modal-title h2">Vielen Dank!</div>
-                        <span class="text-muted ml-auto">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</span>
                         <span class="text-muted ml-auto"><span class="timer"></span>s</span>
                         <button type="button" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
+                        <div class="text-muted ml-auto">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</div>
                     </div>
                     <!-- ./MODAL HEADER -->
 
