--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -16,7 +16,9 @@
                         <button type="button" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <div class="text-muted ml-auto">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</div>
+                        <div>
+                            <p class="text-muted">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</p>    
+                        </div>
                     </div>
                     <!-- ./MODAL HEADER -->
 
