added a min height for the text

--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -22,7 +22,7 @@
                     <!-- MODAL BODY -->
                     <div class="modal-body">
                         <div class="row is-table-row">
-                            <div class="col-md-12">
+                            <div class="col-md-12" style="min-height: 80px;">
                                 <p class="text-muted">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</p>    
                             </div>
                             <div class="col-md-4" style="min-height: 80px;">
